crates/retiretui_tui/src/snapshots/retiretui_tui__frames__ledger_table_accounts_200x55.snap
---
source: crates/retiretui_tui/src/frames.rs
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          full.toml ● 
┴──────────┴╯        ╰┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭ Ledger · today's dollars · Balances by account ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Year  Age               Income       Spending            Tax      Withdrawn           cash      brokerage       fid-401k       roth-ira   rollover-ira            hsa     pension-dc      Net worth │
│  2029  54/50           $150,000        $90,000        $17,687             $0        $76,916       $338,616       $662,257       $105,509             $0        $61,408        $67,724     $1,312,429▲│
│  2030  55/51           $150,000        $90,000        $17,686             $0        $85,353       $346,875       $716,871       $109,112             $0        $70,907        $69,376     $1,398,494║│
│  2031  56/52           $150,000        $90,000        $17,685             $0        $93,586       $355,335       $773,350       $112,837             $0        $80,636        $71,068     $1,486,813█│
│  2032  57/53  ◆        $250,000        $90,000        $17,686             $0       $201,617       $364,001       $831,759       $116,690             $0        $90,603        $72,801     $1,677,472█│
│  2033  58/54           $150,000        $90,000        $17,685             $0       $207,015       $372,880       $892,159       $120,675             $0       $100,813        $74,576     $1,768,119█│
│  2034  59/55           $150,000        $90,000        $17,686             $0       $212,280       $381,975       $954,623       $124,796             $0       $111,272        $76,395     $1,861,341█│
│  2035  60/56           $150,000        $90,000        $17,687             $0       $217,414       $391,291     $1,019,221       $129,057             $0       $121,986        $78,258     $1,957,228║│
│  2036  61/57           $150,000        $90,000        $17,686             $0       $222,425       $400,834     $1,086,024       $133,465             $0       $132,962        $80,167     $2,055,877║│
│  2037  62/58  ◆         $22,864        $90,000           $308        $99,444       $117,556       $410,611     $1,125,107       $168,022        $82,123       $144,205             $0     $2,047,624║│
│  2038  63/59            $22,307       $105,000         $4,738        $87,431        $27,258       $420,626     $1,133,525       $203,760        $84,126       $147,722             $0     $2,017,017║│
│  2039  64/60            $21,763       $105,000         $8,214        $91,452             $0       $366,027     $1,142,231       $240,718        $86,178       $151,324             $0     $1,986,477║│
│  2040  65/61  ◆         $21,232       $105,001         $9,781        $93,550             $0       $281,404     $1,151,234       $278,937        $88,280       $155,015             $0     $1,954,871║│
│  2041  66/62            $20,714       $105,000         $9,863        $94,149             $0       $194,119     $1,160,545       $318,462        $90,433       $158,796             $0     $1,922,355║│
│▌ 2042  67/63  ◆         $43,542       $105,001        $10,643        $72,102             $0       $126,751     $1,170,173       $359,336        $92,639       $162,669             $0     $1,911,569▼│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ To do in 2042 ──────────────────────────────────────────────────────────────────────────────────╮╭ So far · today's dollars ──────╮╭ Money in ───────────────────────────────────────────────────────╮
│▏ ◆ Social Security · jordan, $40k a year                                                        ││▏ Taxes          $238k of $661k ││▏ db-pension                                             $20,209 │
│  Convert $30,000 from fid-401k to roth-ira                                                      ││  Converted      $180k of $330k ││  ss-jordan                                              $23,333 │
│  Withdraw $72,102 from brokerage                                                                ││  Withdrawn     $538k of $2.37M ││  From brokerage                                         $72,102 │
╰─────────────────────────────────────────────────────────────────────────────────────────────────╯╰────────────────────────────────╯│                                                                 │
╭ Flows ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│  Income                                                 $43,542 │
│  Account              Open Moves                                                                                Growth      Close ││  Withdrawn                                              $72,102 │
│▏ brokerage        $189,384 -$72,102 for spending                                                        +$9,469 · 5.0%   $126,751 ││  Total                                                 $115,644 │
│  fid-401k       $1,132,239 -$30,000 → roth-ira (conversion)                                            +$67,934 · 6.0% $1,170,173 ││                                                                 │
│  roth-ira         $310,695 +$30,000 ← fid-401k (conversion)                                            +$18,642 · 6.0%   $359,336 ││                                                                 │
│  rollover-ira      $88,227                                                                              +$4,412 · 5.0%    $92,639 │╰─────────────────────────────────────────────────────────────────╯
│  hsa              $154,923                                                                              +$7,746 · 5.0%   $162,669 │╭ Money out ──────────────────────────────────────────────────────╮
│  All accounts   $1,875,468 -$72,102                                                                   +$108,203 · 5.8% $1,911,569 ││▏ living                                                 $90,000 │
│                                                                                                                                   ││  travel                                                 $15,000 │
│                                                                                                                                   ││  Tax                                                    $10,643 │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   ││  Spending                                              $105,001 │
│                                                                                                                                   ││  Total                                                 $115,644 │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   │╰─────────────────────────────────────────────────────────────────╯
│                                                                                                                                   │╭ Tax ────────────────────────────────────────────────────────────╮
│                                                                                                                                   ││▏ Ordinary                                                $4,045 │
│                                                                                                                                   ││  State                                                   $6,598 │
│                                                                                                                                   ││  Total                                                  $10,643 │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   ││  To top of 12%                                          $62,958 │
│                                                                                                                                   ││  MAGI                                                  $119,073 │
│                                                                                                                                   ││  Taxable income                                         $37,842 │
│                                                                                                                                   ││  Realized gains                                         $49,032 │
│                                                                                                                                   ││  Taxable Soc. Sec.                                      $19,833 │
│                                                                                                                                   ││  Tax over MAGI                                             8.9% │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   ││                                                                 │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────────╯
 t table  c columns  ←→ year  {} marked year  ⇥ pane  ctrl-s save  r reload  q quit  ctrl-↓ tab  n dollars                                                                           : commands  ? help
