crates/retiretui_tui/src/snapshots/retiretui_tui__frames__ledger_table_tax_128x32.snap
---
source: crates/retiretui_tui/src/frames.rs
assertion_line: 45
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴╯        ╰┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
╭ Ledger · today's dollars · Tax figures ──────────────────────────────────────────────────────────────────────────────────────╮
│  Year  Age            Income    Spending         Tax   Withdrawn        MAGI Taxable inc   Converted        RMDs   Net worth▲│
│  2026  51/47        $150,000     $90,000     $17,686          $0    $118,000     $85,800          $0          $0  $1,066,964█│
│  2027  52/48        $150,000     $90,000     $17,685          $0    $118,000     $85,800          $0          $0  $1,146,745█│
│  2028  53/49        $150,000     $90,000     $17,687          $0    $118,000     $85,800          $0          $0  $1,228,541█│
│  2029  54/50        $150,000     $90,000     $17,687          $0    $118,001     $85,801          $0          $0  $1,312,429█│
│  2030  55/51        $150,000     $90,000     $17,686          $0    $117,999     $85,799          $0          $0  $1,398,494█│
│  2031  56/52        $150,000     $90,000     $17,685          $0    $118,000     $85,800          $0          $0  $1,486,813█│
│  2032  57/53  ◆     $250,000     $90,000     $17,686          $0    $117,999     $85,799          $0          $0  $1,677,472█│
│  2033  58/54        $150,000     $90,000     $17,685          $0    $118,001     $85,801          $0          $0  $1,768,119█│
│  2034  59/55        $150,000     $90,000     $17,686          $0    $118,000     $85,799          $0          $0  $1,861,341█│
│  2035  60/56        $150,000     $90,000     $17,687          $0    $117,999     $85,800          $0          $0  $1,957,228█│
│  2036  61/57        $150,000     $90,000     $17,686          $0    $118,000     $85,800          $0          $0  $2,055,877█│
│  2037  62/58  ◆      $22,864     $90,000        $308     $99,444     $20,864          $0     $30,000          $0  $2,047,624█│
│  2038  63/59         $22,307    $105,000      $4,738     $87,431     $52,307     $20,107     $30,000          $0  $2,017,017█│
│  2039  64/60         $21,763    $105,000      $8,214     $91,452     $92,598     $19,562     $30,000          $0  $1,986,477║│
│  2040  65/61  ◆      $21,232    $105,001      $9,781     $93,550    $111,783     $19,031     $30,000          $0  $1,954,871║│
│  2041  66/62         $20,714    $105,000      $9,863     $94,149    $113,234     $18,514     $30,000          $0  $1,922,355║│
│▌ 2042  67/63  ◆      $43,542    $105,001     $10,643     $72,102    $119,073     $37,842     $30,000          $0  $1,911,569║│
│  2043  68/64         $59,716    $105,000     $11,247     $56,531    $123,022     $51,516     $30,000          $0  $1,916,583║│
│  2044  69/65  ◆      $59,235    $105,000     $11,196     $56,961    $123,666     $51,035     $30,000          $0  $1,921,800║│
│  2045  70/66         $58,766    $105,000     $21,133     $67,368    $144,999     $99,353     $30,000          $0  $1,917,264║│
│  2046  71/67         $58,308    $105,000     $24,787     $71,479    $153,786    $121,587     $30,000          $0  $1,908,575║│
│  2047  72/68         $57,861    $105,000     $24,792     $71,930    $153,792    $121,592     $30,000          $0  $1,899,073║│
│  2048  73/69         $57,426    $105,000     $13,460     $61,034    $112,460     $80,260          $0          $0  $1,900,076║│
│  2049  74/70         $57,001    $105,000     $13,464     $61,463    $112,463     $80,264          $0          $0  $1,900,616║│
│  2050  75/71  ◆      $56,586    $105,000     $14,129     $62,543    $113,129     $80,929          $0     $42,901  $1,900,023▼│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 c columns  t the year  ←→ year  {} marked year  ⇥ pane  ctrl-s save  r reload  q quit  ctrl-↓ tab           : commands  ? help
