crates/retiretui_tui/src/snapshots/retiretui_tui__frames__ledger_table_treatments_128x32.snap
---
source: crates/retiretui_tui/src/frames.rs
assertion_line: 45
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  full.toml ● 
┴──────────┴╯        ╰┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
╭ Ledger · today's dollars · Balances by treatment ────────────────────────────────────────────────────────────────────────────╮
│  Year  Age            Income    Spending         Tax   Withdrawn     Taxable    Deferred        Roth         HSA   Net worth▲│
│  2026  51/47        $150,000     $90,000     $17,686          $0    $365,314    $572,000     $95,400     $34,250  $1,066,964█│
│  2027  52/48        $150,000     $90,000     $17,685          $0    $382,085    $622,917     $98,658     $43,086  $1,146,745█│
│  2028  53/49        $150,000     $90,000     $17,687          $0    $398,821    $675,558    $102,026     $52,137  $1,228,541█│
│  2029  54/50        $150,000     $90,000     $17,687          $0    $415,532    $729,980    $105,509     $61,408  $1,312,429█│
│  2030  55/51        $150,000     $90,000     $17,686          $0    $432,228    $786,247    $109,112     $70,907  $1,398,494█│
│  2031  56/52        $150,000     $90,000     $17,685          $0    $448,921    $844,418    $112,837     $80,636  $1,486,813█│
│  2032  57/53  ◆     $250,000     $90,000     $17,686          $0    $565,618    $904,560    $116,690     $90,603  $1,677,472█│
│  2033  58/54        $150,000     $90,000     $17,685          $0    $579,895    $966,736    $120,675    $100,813  $1,768,119█│
│  2034  59/55        $150,000     $90,000     $17,686          $0    $594,254  $1,031,019    $124,796    $111,272  $1,861,341█│
│  2035  60/56        $150,000     $90,000     $17,687          $0    $608,705  $1,097,479    $129,057    $121,986  $1,957,228█│
│  2036  61/57        $150,000     $90,000     $17,686          $0    $623,260  $1,166,191    $133,465    $132,962  $2,055,877█│
│  2037  62/58  ◆      $22,864     $90,000        $308     $99,444    $528,167  $1,207,230    $168,022    $144,205  $2,047,624█│
│  2038  63/59         $22,307    $105,000      $4,738     $87,431    $447,884  $1,217,651    $203,760    $147,722  $2,017,017█│
│  2039  64/60         $21,763    $105,000      $8,214     $91,452    $366,027  $1,228,409    $240,718    $151,324  $1,986,477║│
│  2040  65/61  ◆      $21,232    $105,001      $9,781     $93,550    $281,404  $1,239,514    $278,937    $155,015  $1,954,871║│
│  2041  66/62         $20,714    $105,000      $9,863     $94,149    $194,119  $1,250,978    $318,462    $158,796  $1,922,355║│
│▌ 2042  67/63  ◆      $43,542    $105,001     $10,643     $72,102    $126,751  $1,262,812    $359,336    $162,669  $1,911,569║│
│  2043  68/64         $59,716    $105,000     $11,247     $56,531     $73,311  $1,275,029    $401,607    $166,636  $1,916,583║│
│  2044  69/65  ◆      $59,235    $105,000     $11,196     $56,961     $18,139  $1,287,640    $445,321    $170,701  $1,921,800║│
│  2045  70/66         $58,766    $105,000     $21,133     $67,368          $0  $1,251,873    $490,527    $174,864  $1,917,264║│
│  2046  71/67         $58,308    $105,000     $24,787     $71,479          $0  $1,192,170    $537,276    $179,129  $1,908,575║│
│  2047  72/68         $57,861    $105,000     $24,792     $71,930          $0  $1,129,953    $585,622    $183,498  $1,899,073║│
│  2048  73/69         $57,426    $105,000     $13,460     $61,034          $0  $1,106,483    $605,619    $187,974  $1,900,076║│
│  2049  74/70         $57,001    $105,000     $13,464     $61,463          $0  $1,081,759    $626,298    $192,559  $1,900,616║│
│  2050  75/71  ◆      $56,586    $105,000     $14,129     $62,543          $0  $1,055,084    $647,684    $197,255  $1,900,023▼│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 c columns  t the year  ←→ year  {} marked year  ⇥ pane  ctrl-s save  r reload  q quit  ctrl-↓ tab           : commands  ? help
